# simd-raytracing

./: CMakeLists.txt  README.md
include/: sphere.h  vec3f.h  vec3f8.h
src/: main.cpp
